--- a/TobuAts-EX/TobuAts-EX.csproj
+++ b/TobuAts-EX/TobuAts-EX.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Signals\T-DATC.cs" />
+    <Compile Include="Signals\TSP-ATS.cs" />
     <Compile Include="SpeedLimit.cs" />
     <Compile Include="Tick.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,4 +70,7 @@
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>COPY "J:\Users\Administrator\Source\Repos\TobuAts\TobuAts-EX\$(OutDir)\$(TargetFileName)" "I:\BveTs\Scenarios\A7\TOBU50000\Vehicle\PI\50090\ats131025\AtsEX\AtsEXPlugins\$(TargetFileName)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
