--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,14 @@ name: MSBuild
 
 on:
   pull_request:
+    branches: [ "master" ]
+    paths:
+      - '*/**'
+      - '!./*'
+      - './*.sln'
+      - '!.github/**'
   push:
-    branches:
-      - master
+    branches: [ "master" ]
     paths:
       - '*/**'
       - '!./*'
