--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,10 @@ name: MSBuild
 
 on:
   pull_request:
-    branches: [ "master" ]
-    paths:
-      - '*/**'
-      - '!./*'
-      - './*.sln'
-      - '!.github/**'
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+      - develop
     paths:
       - '*/**'
       - '!./*'
@@ -41,7 +37,7 @@ jobs:
       run: |
         ls -alR
         mkdir plugins/
-        find . -type f -path '*/out/TobuAts.dll' | xargs mv -t ./plugins/
+        find . -type f -path '*/out/*.dll' | xargs mv -t ./plugins/
       shell: bash
 
     - name: Upload artifact
