--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         ls -alR
         mkdir plugins/
-        find . -type f -path '*/out/*.dll' | xargs mv -t ./plugins/
+        find . -type f -path '*/out/*.dll' -name 'TobuAts*' | xargs mv -t ./plugins/
       shell: bash
 
     - name: Upload artifact
