--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Collect artifact
         run: |
           mkdir plugins/
-          find . -type f -path '*/out/*.dll' | xargs mv -t ./plugins/
+          find . -type f -path '*/out/*.dll' -name 'TobuAts*' | xargs mv -t ./plugins/
         shell: bash
       - name: Check assembly version
         id: version
