--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Setup Nuget
         uses: NuGet/setup-nuget@v1.2.0
       - name: Restore nuget packages
-        run: nuget restore TobuAts.sln
+        run: nuget restore MetroAts.sln
       - name: Build sln
-        run: msbuild TobuAts.sln /m /p:configuration="Release" /p:platform="Any CPU" /p:OutputPath="./out/"
+        run: msbuild MetroAts.sln /m /p:configuration="Release" /p:platform="Any CPU" /p:OutputPath="./out/"
         shell: cmd
       - name: Collect artifact
         run: |
