--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Collect artifact
         run: |
           mkdir plugins/
-          find . -type f -path '*/out/*.dll' | xargs mv --force --backup=numbered -t ./plugins/
+          find . -type f -path '*/out/TobuAts-EX.dll' | xargs mv --force --backup=numbered -t ./plugins/
+          find . -type f -path '*/out/SeibuAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
+          find . -type f -path '*/out/ATC.dll' | xargs mv --force --backup=numbered -t ./plugins/
           rm plugins/*~
         shell: bash
       - name: Check assembly version
