--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         ls -alR
         mkdir plugins/
-        find . -type f -path '*/out/TobuAts-EX.dll' | xargs mv --force --backup=numbered -t ./plugins/
+        find . -type f -path '*/out/TobuAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
         find . -type f -path '*/out/SeibuAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
         find . -type f -path '*/out/ATC.dll' | xargs mv --force --backup=numbered -t ./plugins/
         rm plugins/*~
