--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         mkdir plugins/
         find . -type f -path '*/out/TobuAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
         find . -type f -path '*/out/SeibuAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
-        find . -type f -path '*/out/ATC.dll' | xargs mv --force --backup=numbered -t ./plugins/
+        find . -type f -path '*/out/MetroAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
       shell: bash
 
     - name: Upload artifact
