--- a/MetroAts/MetroAts.csproj
+++ b/MetroAts/MetroAts.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -73,6 +74,8 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Signals\ATC.cs" />
+    <Compile Include="Signals\ATS-P_SN.cs" />
+    <Compile Include="Signals\SeibuATS.cs" />
     <Compile Include="Signals\T-DATC.cs" />
     <Compile Include="Signals\TSP-ATS.cs" />
     <Compile Include="SpeedLimit.cs" />
