--- a/MetroAts/MetroAts.csproj
+++ b/MetroAts/MetroAts.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) C:\Users\Lenovo\Documents\BveTs\Scenarios\f_c_70359\05b\Ats\AtsEXPlugins\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
