--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,10 +59,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Create tag
-        run: |
-           git tag ${{needs.build.outputs.version}}
-           git push origin ${{needs.build.outputs.version}}
       - name: Download a build artifact
         uses: actions/download-artifact@v3.0.2
       - name: Get repository name
@@ -75,10 +71,9 @@ jobs:
            zip ${{env.FILE_NAME}}.zip -r *
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
-           tag_name: ${{ github.ref }}
-           name: Release ${{ github.ref }}
+           tag_name: ${{needs.build.outputs.version}}
+           name: Release ${{needs.build.outputs.version}}
            body: TODO New Release.
            draft: true
            prerelease: true
