--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Download a build artifact
         uses: actions/download-artifact@v3.0.2
+      - name: Create tag
+        run: |
+           git tag ${{needs.build.outputs.version}}
+           git push origin ${{needs.build.outputs.version}}
       - name: Get repository name
         run: |
           echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
