--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,9 +62,12 @@ jobs:
       - name: Download a build artifact
         uses: actions/download-artifact@v3.0.2
       - name: Create tag
-        run: |
-           git tag ${{needs.build.outputs.version}}
-           git push origin ${{needs.build.outputs.version}}
+        uses: rickstaa/action-create-tag@v1
+        id: "tag_create"
+        with:
+          tag: "${{needs.build.outputs.version}}"
+          tag_exists_error: true
+          message: "Created tag ${{needs.build.outputs.version}}"
       - name: Get repository name
         run: |
           echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
