--- a/SeibuSignal/SeibuSignal.csproj
+++ b/SeibuSignal/SeibuSignal.csproj
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D695CCBD-6046-4723-9C59-1E4ECCB1B3CB}</ProjectGuid>
+    <ProjectGuid>{54E4A8BD-8487-42FE-BACA-4991FDBDC7EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MetroAts</RootNamespace>
-    <AssemblyName>MetroAts</AssemblyName>
+    <RootNamespace>SeibuSignal</RootNamespace>
+    <AssemblyName>SeibuSignal</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>false</Deterministic>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,21 +45,19 @@
     <Compile Include="Config.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Load.cs" />
-    <Compile Include="Signals\ATC.cs" />
-    <Compile Include="Signals\ATS-P_SN.cs" />
-    <Compile Include="Signals\SeibuATS.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signals\CS-ATC\ATC.cs" />
+    <Compile Include="Signals\SeibuATS\SeibuATS.cs" />
     <Compile Include="SpeedPattern.cs" />
     <Compile Include="Tick.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BveEx.CoreExtensions">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="BveEx.PluginHost">
+      <Version>2.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
