--- a/TobuSignal/TobuSignal.csproj
+++ b/TobuSignal/TobuSignal.csproj
@@ -62,4 +62,8 @@
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
