--- a/SotetsuSignal/JR_SotetsuSignal.csproj
+++ b/SotetsuSignal/JR_SotetsuSignal.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5C21E6F9-90AF-479E-802A-2CFF8FC59ABE}</ProjectGuid>
+    <ProjectGuid>{5291C113-A4FF-46B8-ACB6-9B55E3516630}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TobuSignal</RootNamespace>
-    <AssemblyName>TobuSignal</AssemblyName>
+    <RootNamespace>SotetsuSignal</RootNamespace>
+    <AssemblyName>SotetsuSignal</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>false</Deterministic>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,16 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="Input.cs" />
-    <Compile Include="Load.cs" />
-    <Compile Include="Signals\T-DATC\Functions.cs" />
-    <Compile Include="Signals\T-DATC\Tick.cs" />
-    <Compile Include="Signals\TSP-ATS\Functions.cs" />
-    <Compile Include="Signals\TSP-ATS\Tick.cs" />
-    <Compile Include="SpeedPattern.cs" />
-    <Compile Include="Tick.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signals\ATS-P\ATS-P_SN.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MetroAts\MetroAts.csproj">
+      <Project>{d695ccbd-6046-4723-9c59-1e4eccb1b3cb}</Project>
+      <Name>MetroAts</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BveEx.CoreExtensions">
@@ -62,13 +60,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MetroAts\MetroAts.csproj">
-      <Project>{d695ccbd-6046-4723-9c59-1e4eccb1b3cb}</Project>
-      <Name>MetroAts</Name>
-    </ProjectReference>
+    <Folder Include="Signals\ATS-SN\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\A7\TOBU50000\Vehicle\BveExPlugins\$(TargetFileName)</PostBuildEvent>
-  </PropertyGroup>
 </Project>
