--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
         ls -alR
         mkdir plugins/
         find . -type f -path '*/out/MetroAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
+        find . -type f -path '*/out/*.dll' -name '*Signal' | xargs mv --force --backup=numbered -t ./plugins/
       shell: bash
 
     - name: Upload artifact
