--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,12 @@ jobs:
         run: |
           mkdir plugins/
           find . -type f -path '*/out/MetroAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
+          find . -type f -path '*/out/*.dll' -name '*Signal' | xargs mv --force --backup=numbered -t ./plugins/
         shell: bash
       - name: Check assembly version
         id: version
         run: |
-          Get-ChildItem plugins/ -Recurse -Filter "*.dll" -File | foreach {
+          Get-ChildItem plugins/ -Recurse -Filter "MetroAts.dll" -File | foreach {
           Write-Output $_.FileName
           $_.FileName
           "name=$_" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
