--- a/JR_SotetsuSignal/JR_SotetsuSignal.csproj
+++ b/JR_SotetsuSignal/JR_SotetsuSignal.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,9 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Input.cs" />
+    <Compile Include="Load.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signals\ATS-P\ATS-P_SN.cs" />
+    <Compile Include="Signals\ATS-P\Functions.cs" />
+    <Compile Include="Signals\ATS-P\Tick.cs" />
+    <Compile Include="Signals\ATS-SN\Functions.cs" />
+    <Compile Include="Signals\ATS-SN\Tick.cs" />
+    <Compile Include="SpeedPattern.cs" />
+    <Compile Include="Tick.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MetroAts\MetroAts.csproj">
@@ -59,8 +68,6 @@
       <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Signals\ATS-SN\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
