--- a/MetroSignal/MetroSignal.csproj
+++ b/MetroSignal/MetroSignal.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,9 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Input.cs" />
+    <Compile Include="Load.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signals\ATP\Functions.cs" />
+    <Compile Include="Signals\ATP\Tick.cs" />
     <Compile Include="Signals\CS-ATC\ATC.cs" />
+    <Compile Include="Signals\CS-ATC\Functions.cs" />
+    <Compile Include="Signals\CS-ATC\Tick.cs" />
+    <Compile Include="Signals\CS-DATC\Functions.cs" />
+    <Compile Include="Signals\CS-DATC\Tick.cs" />
+    <Compile Include="Signals\WS-ATC\Functions.cs" />
+    <Compile Include="Signals\WS-ATC\Tick.cs" />
+    <Compile Include="SpeedPattern.cs" />
+    <Compile Include="Tick.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MetroAts\MetroAts.csproj">
@@ -59,8 +72,6 @@
       <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Signals\WS-ATC\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
