Some little fix.

--- a/MetroAts/MetroAts.csproj
+++ b/MetroAts/MetroAts.csproj
@@ -57,7 +57,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\vertah\tm10000\BveExPlugins\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
 </Project>
