--- a/TokyuSignal/TokyuSignal.csproj
+++ b/TokyuSignal/TokyuSignal.csproj
@@ -70,6 +70,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\vertah\tkk8590\BveExPlugins\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
