--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,11 +39,12 @@ jobs:
         mkdir plugins/
         find . -type f -name 'MetroAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
         find . -type f -name '*Signal.dll' | xargs mv --force --backup=numbered -t ./plugins/
+        find . -type f -name 'NotchOutput.dll' | xargs mv --force --backup=numbered -t ./plugins/
         rm plugins/*~
       shell: bash
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: plugins
         path: ./plugins/
