--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
           mkdir plugins/
           find . -type f -name 'MetroAts.dll' | xargs mv --force --backup=numbered -t ./plugins/
           find . -type f -name '*Signal.dll' | xargs mv --force --backup=numbered -t ./plugins/
+          find . -type f -name 'MetroPIAddon.dll' | xargs mv --force --backup=numbered -t ./plugins/
           rm plugins/*~
         shell: bash
       - name: Check assembly version
