--- a/MetroPIAddon/MetroPIAddon.csproj
+++ b/MetroPIAddon/MetroPIAddon.csproj
@@ -64,8 +64,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\vertah\tm10000\BveExPlugins\$(TargetFileName)
-COPY $(TargetPath) D:\Scenarios\vertah\trta05_v40\BveExPlugins\$(TargetFileName)
-</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
