--- a/JR_SotetsuSignal/JR_SotetsuSignal.csproj
+++ b/JR_SotetsuSignal/JR_SotetsuSignal.csproj
@@ -50,8 +50,8 @@
     <Compile Include="Signals\ATS-P\Tick.cs" />
     <Compile Include="Signals\ATS-SN\Functions.cs" />
     <Compile Include="Signals\ATS-SN\Tick.cs" />
-    <Compile Include="Signals\CS-ATC\Functions.cs" />
-    <Compile Include="Signals\CS-ATC\Tick.cs" />
+    <Compile Include="Signals\ATC-10\Functions.cs" />
+    <Compile Include="Signals\ATC-10\Tick.cs" />
     <Compile Include="SpeedPattern.cs" />
     <Compile Include="Tick.cs" />
   </ItemGroup>
@@ -66,7 +66,7 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="BveEx.PluginHost">
-      <Version>2.0.5</Version>
+      <Version>2.0.5.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
