--- a/OdakyuSignal/OdakyuSignal.csproj
+++ b/OdakyuSignal/OdakyuSignal.csproj
@@ -42,8 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Input.cs" />
+    <Compile Include="Load.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signals\D-ATS-P\Functions.cs" />
+    <Compile Include="Signals\D-ATS-P\Tick.cs" />
+    <Compile Include="Signals\OM-ATS\Functions.cs" />
+    <Compile Include="Signals\OM-ATS\Tick.cs" />
+    <Compile Include="SpeedPattern.cs" />
+    <Compile Include="Tick.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MetroAts\MetroAts.csproj">
@@ -56,8 +64,9 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="BveEx.PluginHost">
-      <Version>2.0.5</Version>
+      <Version>2.0.5.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
