--- a/MetroPIAddon/MetroPIAddon.csproj
+++ b/MetroPIAddon/MetroPIAddon.csproj
@@ -64,7 +64,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\tm10000\ats\Wup\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
 </Project>
