本地开发环境内容删除

--- a/MetroPIAddon/MetroPIAddon.csproj
+++ b/MetroPIAddon/MetroPIAddon.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) D:\Scenarios\tm10000\ats\Wup\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
