Configure release workflow with target repo and token
Added environment variables for target repository and workflow in the release workflow.

Signed-off-by: Win_Update <3166832341@qq.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,10 @@ jobs:
   release:
     name: Create release
     runs-on: ubuntu-latest
+    env:
+      TARGET_REPO: winup-zhou/bve-autopilot-S-EX
+      TARGET_WORKFLOW_FILE: build.yml
+      GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     needs: build
     permissions:
       contents: write
@@ -62,7 +66,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Get latest workflow run id of winup-zhou/bve-autopilot-S-EX
+        run: |
+          RUN_ID=$(gh run list -w ${{ env.TARGET_WORKFLOW_FILE }} --repo "${{ env.TARGET_REPO }}" -L 1 --json databaseId | jq -r '.[0].databaseId')
+          echo "LATEST_RUN_ID=$RUN_ID" >> "$GITHUB_ENV"
+        shell: bash 
       - name: Download a build artifact
+        uses: actions/download-artifact@v4
+        with:
+          run-id: ${{ env.LATEST_RUN_ID }}
+          path: MetroAts
+          repository: ${{ env.TARGET_REPO }}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
+      - name: Download a build artifact from winup-zhou/MetroAts
         uses: actions/download-artifact@v4
       - name: Create tag
         uses: rickstaa/action-create-tag@v1
